--- a/frap_book.tex
+++ b/frap_book.tex
@@ -213,7 +213,7 @@ Such types can be defined by enumerating their \emph{constructor}\index{construc
 \begin{eqnarray*}
   \mathsf{Const} &:& \mathbb{N} \to \mathsf{Exp} \\
   \mathsf{Var} &:& \mathsf{Strings} \to \mathsf{Exp} \\
-  \mathsf{Plus} &:& \mathsf{Exp} \times \mathsf{Exp} \to \mathsf{Exp} \\
+  \mathsf{Plus} &:& \mathsf{Exp} + \mathsf{Exp} \to \mathsf{Exp} \\
   \mathsf{Times} &:& \mathsf{Exp} \times \mathsf{Exp} \to \mathsf{Exp}
 \end{eqnarray*}
 
