Revising Interpreters before class

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -138,7 +138,7 @@ However, they go better together.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Formalizing Program Syntax}
+\chapter{Formalizing Program Syntax}\label{syntax}
 
 \section{Concrete Syntax}
 
@@ -698,7 +698,7 @@ Let's shift our attention to what programs \emph{mean}.
 \newcommand{\msel}[2]{#1(#2)}
 \newcommand{\mupd}[3]{#1[#2 \mapsto #3]}
 
-To explain the meaning of one of last chapter's arithmetic expressions, we need a way to indicate the value of each variable.
+To explain the meaning of one of Chapter \ref{syntax}'s arithmetic expressions, we need a way to indicate the value of each variable.
 \encoding
 A theory of \emph{finite maps}\index{finite map} is helpful here.
 We apply the following notations throughout the book: \\
