Update before lecturing on BasicSyntax

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -46,7 +46,7 @@ For more information, see the book's home page:
 \mbox{}\vfill
 \begin{center}
 
-Copyright Adam Chlipala 2015-2017.
+Copyright Adam Chlipala 2015-2021.
 
 
 This work is licensed under a
@@ -407,7 +407,7 @@ The notations are suggestive, but in fact we have free reign in choosing the set
 The formal theory is then as follows, where we consider as ``true'' only those equalities that follow from the axioms.
 $$\begin{array}{rrcl}
   \textrm{Variables} & x &\in& \mathsf{Strings} \\
-  \textrm{Terms} & e &::=& x \mid e + e \mid e \times e \\
+  \textrm{Terms} & e &::=& 0 \mid 1 \mid x \mid e + e \mid e \times e \\
   \textrm{Propositions} & \phi &::=& e = e
 \end{array}$$
 
